--- a/spring3/pom.xml
+++ b/spring3/pom.xml
@@ -63,6 +63,14 @@
 			<version>1.0.2</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.70</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
