--- a/spring3/pom.xml
+++ b/spring3/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.cyber009.spring3</groupId>
 	<artifactId>spring3</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>t0</name>
 	<description>spring3-t0 project for Spring Boot</description>
 	<properties>
@@ -27,6 +27,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>2.2</version>
 		</dependency>
 
 
