--- a/spring3/Makefile
+++ b/spring3/Makefile
@@ -1,5 +1,6 @@
 build:
-	mkdir ./spring3-oracle-db
+	mkdir -p ./db/spring3-oracle-db
+	mkdir -p ./db/spring3-rabbitmq-db
 	docker compose build
 up:
 	docker compose up -d --remove-orphans
