--- a/spring3/docker-compose.yml
+++ b/spring3/docker-compose.yml
@@ -4,16 +4,35 @@ services:
     container_name: "spring3-oracle-db"
     image: container-registry.oracle.com/database/express:21.3.0-xe
     volumes:
-      - db:/opt/oracle/oradata
+      - oracle_db:/opt/oracle/oradata
     environment:
       ORACLE_PWD: "db"
     ports:
       - "1522:1521"
+  rabbitmq:
+    image: "rabbitmq:management"
+    ports:
+      - "5672:5672"  # RabbitMQ standard AMQP port
+      - "15672:15672"  # RabbitMQ Management UI port
+    volumes:
+      - rabbitmq_db:/var/lib/rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: rabbitmq
+      RABBITMQ_DEFAULT_PASS: rabbitmq
+
+
 volumes:
-  db:
+  oracle_db:
     driver: local
     name: "spring3-oracle-db"
     driver_opts:
       type: none
       o: bind
-      device: spring3-oracle-db
+      device: ./db/spring3-oracle-db
+  rabbitmq_db:
+    driver: local
+    name: "spring3-rabbitmq-db"
+    driver_opts:
+      type: none
+      o: bind
+      device: ./db/spring3-rabbitmq-db
