rabbitMQ configure set

--- a/spring3/Makefile
+++ b/spring3/Makefile
@@ -1,6 +1,7 @@
 build:
 	mkdir -p ./db/spring3-oracle-db
 	mkdir -p ./db/spring3-rabbitmq-db
+	mkdir -p ./db/spring3-redis-db
 	docker compose build
 up:
 	docker compose up -d --remove-orphans
