--- a/spring3/pom.xml
+++ b/spring3/pom.xml
@@ -50,6 +50,13 @@
 			<version>5.18.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>3.1.4</version>
+		</dependency>
+
 
 
 		<dependency>
