--- a/spring3-microservice/user-service/src/main/resources/application.yml
+++ b/spring3-microservice/user-service/src/main/resources/application.yml
@@ -1,7 +1,5 @@
-server:
-  port: 7171
-
 spring:
   application:
-    name: UserService
-
+    name: user-service
+  config:
+    import: optional:configserver:http://localhost:7071
