--- a/spring3-microservice/common/pom.xml
+++ b/spring3-microservice/common/pom.xml
@@ -17,6 +17,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>common</name>
 	<description>Common</description>
+	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
