--- a/spring3-microservice/config-server/pom.xml
+++ b/spring3-microservice/config-server/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>config-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ConfigServer</name>
+	<packaging>jar</packaging>
 	<description>ConfigServer</description>
 	<properties>
 		<java.version>17</java.version>
