--- a/spring3-microservice/user-service/pom.xml
+++ b/spring3-microservice/user-service/pom.xml
@@ -6,6 +6,10 @@
 	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>UserService</name>
+	<packaging>jar</packaging>
+	<properties>
+		<java.version>17</java.version>
+	</properties>
 	<description>User Service</description>
 	<dependencies>
 		<dependency>
