--- a/s3-security-t2/pom.xml
+++ b/s3-security-t2/pom.xml
@@ -93,6 +93,13 @@
 			<version>6.2.7.Final</version> <!-- Match your Hibernate version -->
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
