--- a/s3-security-t2/pom.xml
+++ b/s3-security-t2/pom.xml
@@ -92,7 +92,11 @@
 			<artifactId>hibernate-community-dialects</artifactId>
 			<version>6.2.7.Final</version> <!-- Match your Hibernate version -->
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.17.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
 		<dependency>
 			<groupId>com.github.javafaker</groupId>
